--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -69,19 +69,19 @@
             <div class="collapse navbar-collapse" id="collapsibleNavId">
                 <ul class="navbar-nav m-auto d-flex align-items-center justify-content-center p-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Inicio<span class="sr-only">(current)</span></a>
+                        <a class="nav-link text-navbar" href="index.html">Inicio<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="quienes-somos.html">Quienes Somos</a>
+                        <a class="nav-link text-navbar active" href="quienes-somos.html">Quienes Somos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="servicios.html">Servicios</a>
+                        <a class="nav-link text-navbar" href="servicios.html">Servicios</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="blog.html">Blog</a>
+                        <a class="nav-link text-navbar" href="blog.html">Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contacto.html">Contacto</a>
+                        <a class="nav-link text-navbar" href="contacto.html">Contacto</a>
                     </li>
                 </ul>
 
@@ -191,7 +191,7 @@
                                         class="rounded-circle z-depth-3" alt="Sample avatar" width="140">
                                 </div>
                                 <h4 class="font-weight-bold mt-4 mb-3 text-theme">Tom Adams</h4>
-                                <h5 class="text-uppercase text-theme text-center mb-4">Backend developer</h5>
+                                <h5 class="text-uppercase text-theme text-center mb-4">Desarrollador Web</h5>
                                 <p>Perspiciatis repellendus ad odit consequuntur, eveniet earum nisi
                                     qui consectetur
                                     totam officia voluptates perferendis voluptatibus aut.</p>
@@ -219,8 +219,7 @@
                                         class="rounded-circle z-depth-3" alt="Sample avatar" width="140">
                                 </div>
                                 <h4 class="font-weight-bold mt-4 mb-3 text-theme">Angelina Jolie</h4>
-                                <h5 class="text-uppercase text-center font-weight-bold text-theme mb-4">Diseñador Web
-                                </h5>
+                                <h5 class="text-uppercase text-center font-weight-bold text-theme mb-4">Diseñador Web</h5>
                                 <p>Perspiciatis repellendus ad odit consequuntur, eveniet earum nisi
                                     qui consectetur
                                     totam officia voluptates perferendis voluptatibus aut.</p>
