--- a/index.html
+++ b/index.html
@@ -72,19 +72,19 @@
         <div class="collapse navbar-collapse" id="collapsibleNavId">
             <ul class="navbar-nav m-auto d-flex align-items-center justify-content-center p-0">
                 <li class="nav-item">
-                    <a class="nav-link active" href="index.html">Inicio<span class="sr-only">(current)</span></a>
+                    <a class="nav-link text-navbar active" href="index.html">Inicio<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="quienes-somos.html">Quienes Somos</a>
+                    <a class="nav-link text-navbar" href="quienes-somos.html">Quienes Somos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="servicios.html">Servicios</a>
+                    <a class="nav-link text-navbar" href="servicios.html">Servicios</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="blog.html">Blog</a>
+                    <a class="nav-link text-navbar" href="blog.html">Blog</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="contacto.html">Contacto</a>
+                    <a class="nav-link text-navbar" href="contacto.html">Contacto</a>
                 </li>
             </ul>
 
