--- a/blog.html
+++ b/blog.html
@@ -116,9 +116,8 @@
     <!-- Encabezado -->
 
     <!-- Contenido -->
-    <main class="section-wrapper">
+    <main class="main">
         <section class="blog">
-
             <!-- Section Title -->
             <div class="view">
                 <div class="section-img d-block w-100">
@@ -134,7 +133,7 @@
             <!-- ./Section Title -->
 
             <!-- Section Content -->
-            <div class="section-content content-bg lighten-5">
+            <div class="section-content bg-light-blue-1">
                 <div class="content-wrapper max-width">
                     <div class="container-fluid">
 
@@ -352,9 +351,9 @@
                         <!-- ./Paginación -->
 
                     </div>
-                    <!-- ./Section Content -->
                 </div>
             </div>
+            <!-- ./Section Content -->
         </section>
     </main>
     <!-- Contenido -->
