--- a/contacto.html
+++ b/contacto.html
@@ -68,7 +68,8 @@
             <div class="collapse navbar-collapse" id="collapsibleNavId">
                 <ul class="navbar-nav m-auto d-flex align-items-center justify-content-center p-0">
                     <li class="nav-item">
-                        <a class="nav-link text-navbar" href="index.html">Inicio<span class="sr-only">(current)</span></a>
+                        <a class="nav-link text-navbar" href="index.html">Inicio<span
+                                class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-navbar" href="quienes-somos.html">Quienes Somos</a>
@@ -117,7 +118,7 @@
     <!-- Encabezado -->
 
     <!-- Contenido -->
-    <main class="section-wrapper">
+    <main class="main">
         <section class="contact">
 
             <!-- Section Title -->
@@ -125,8 +126,7 @@
                 <div class="section-img d-block w-100">
                     <img src="img/imagenes/contacto.jpeg" class="img-fluid w-100" alt="personas saludando">
                 </div>
-                <div
-                    class="mask rgba-stylish-strong section-title d-flex align-items-center justify-content-center">
+                <div class="mask rgba-stylish-strong section-title d-flex align-items-center justify-content-center">
                     <div class="white-text text-justify">
                         <h1 class="h1-responsive text-center">Contacto</h1>
                         <hr class="hr-section-title">
@@ -135,126 +135,118 @@
             </div>
             <!-- ./Section Title -->
 
-
             <!-- Contenido -->
-            <div class="section-content content-bg lighten-5 p-5">
-
-                <!-- Formulario -->
-                <div class="container-fluid">
-                    <!--Section: Contact v.2-->
-                    <div class="max-width m-auto text-theme">
-                        <!--Section description-->
-                        <p class="pregunta-contacto w-responsive mx-auto">¿Tiene usted alguna pregunta? Por
-                            favor no
-                            dude en
-                            contactar con nosotros
-                            directamente.</p>
-                        <p class="pregunta-contacto w-responsive mx-auto mb-5">Nuestro equipo volverá a usted
+            <div class="section-content bg-light-blue-1">
+                <div class="section-wrapper">
+                    <div class="content-wrapper max-width">
+                        <!-- Section description -->
+                        <p class="section-content__pregunta-contacto w-responsive mx-auto text-theme">¿Tiene usted
+                            alguna pregunta?
+                            Por favor no dude en contactar con nosotros directamente. Nuestro equipo volverá a usted
                             dentro de cuestión de horas para ayudarlo.</p>
+                        <!-- ./Section description -->
 
+                        <!-- Formulario -->
+                        <div class="row pt-5">
+
+                            <!-- Envio de correo -->
+                            <div class="col-md-9 mb-md-0 mb-5 bg-light-blue-4 p-3 p-md-5">
+
+                                <form>
+
+                                    <!-- Nombre & Correo Electronico -->
+                                    <div class="row">
+
+                                        <!-- Nombre -->
+                                        <div class="col-md-6">
+                                            <div class="mt-4">
+                                                <label for="contact-name" class="form-label">Nombre Completo</label>
+                                                <input type="text" id="contact-name" class="form-control">
+                                            </div>
+                                        </div>
+                                        <!-- ./Nombre -->
+
+                                        <!-- Correo Electronico -->
+                                        <div class="col-md-6">
+                                            <div class="mt-4">
+                                                <label for="contact-email" class="form-label">Correo Electronico</label>
+                                                <input type="text" id="contact-email" class="form-control">
+                                            </div>
+                                        </div>
+                                        <!-- ./Correo Electronico -->
+
+                                    </div>
+                                    <!-- ./Nombre & Correo Electronico -->
+
+
+                                    <!-- Asunto -->
+                                    <div class="row">
+
+                                        <!-- Asunto -->
+                                        <div class="col-md-12">
+                                            <div class="mt-4">
+                                                <label for="contact-Subject" class="form-label">Asunto</label>
+                                                <input type="text" id="contact-Subject" class="form-control">
+                                            </div>
+                                        </div>
+                                        <!-- ./Asunto -->
+
+                                    </div>
+                                    <!-- ./Asunto -->
+
+                                    <!-- Mensaje -->
+                                    <div class="row">
+                                        <div class="col-md-12">
+                                            <div class="mt-4">
+                                                <label for="contact-message" class="form-label">Mensaje</label>
+                                                <textarea id="contact-message" class="form-control md-textarea"
+                                                    rows="10"></textarea>
+                                            </div>
+                                        </div>                                       
+                                    </div>
+                                    <!-- Mensaje -->
+
+                                </form>
+
+                                <div class="text-center mt-4">
+                                    <a class="btn btn-primary btn-lg">Send</a>
+                                </div>
+
+                            </div>
+                            <!-- ./Envio de correo -->
+
+                            <!-- Datos de contacto -->
+                            <div class="col-md-3 py-5 text-center color-theme">
+                                <ul class="list-unstyled">
+                                    <li>
+                                        <i class="fas fa-map-marker-alt fa-2x white-text"></i>
+                                        <p class="white-text text-center mt-3">San Francisco, CA 94126, USA</p>
+                                    </li>
+                                    <li>
+                                        <i class="fas fa-phone fa-2x mt-4 white-text"></i>
+                                        <p class="white-text text-center mt-3">+ 01 234 567 89</p>
+                                    </li>
+                                    <li>
+                                        <i class="fas fa-envelope fa-2x mt-4 white-text"></i>
+                                        <p class="mb-0 white-text text-center mt-3">contact@example.com</p>
+                                    </li>
+                                </ul>
+                            </div>
+                            <!-- ./Datos de contacto -->
+
+                        </div>
+                        <!-- ./Formulario -->
+
+                        <!-- Google map -->
+                        <div id="map-container-google-1" class="section-content__map-container my-5 p-0">
+                            <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12610.52510214519!2d-122.4059758598319!3d37.798680131327636!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8085806800ecb699%3A0xf91d657fb37e68fd!2sSan%20Francisco%2C%20California%2094126%2C%20EE.%20UU.!5e0!3m2!1ses-419!2smx!4v1585591882087!5m2!1ses-419!2smx"
+                                frameborder="0" allowfullscreen style="border:0; padding: 0; height: 40vh; width: 100%;">
+                            </iframe>
+                        </div>
+                        <!-- ./Google map -->
                     </div>
-                    <!--Section: Contact v.2-->
                 </div>
-
-                <!-- Tabla de Formulario -->
-                <div class="row max-width mx-auto">
-
-                    <!--Grid column-->
-                    <div class="col-md-7 mb-md-0 mb-5 bg-white pb-4">
-                        <form id="contact-form" name="contact-form" action="mail.php" method="POST" class="p-2 p-md-4">
-
-                            <!--Grid row-->
-                            <div class="row">
-
-                                <!--Grid column-->
-                                <div class="col-md-12">
-                                    <div class="form">
-                                        <label for="name" class="text-theme pt-2">Nombre</label>
-                                        <input type="text" id="name" name="name" class="form-control">
-                                    </div>
-                                </div>
-                                <!--Grid column-->
-
-                                <!--Grid column-->
-                                <div class="col-md-12">
-                                    <div class="form mb-2">
-                                        <label for="email" class="text-theme pt-2 ">Correo Electrónico</label>
-                                        <input type="text" id="email" name="email" class="form-control">
-                                    </div>
-                                </div>
-                                <!--Grid column-->
-
-                            </div>
-                            <!--Grid row-->
-
-                            <!--Grid row-->
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <div class="form mb-3">
-                                        <label for="subject" class="text-theme pt-2">Asunto</label>
-                                        <input type="text" id="subject" name="subject" class="form-control">
-                                    </div>
-                                </div>
-                            </div>
-                            <!--Grid row-->
-
-                            <!--Grid row-->
-                            <div class="row">
-
-                                <!--Grid column-->
-                                <div class="col-md-12">
-
-                                    <div class="form mb-2">
-                                        <label for="message" class="text-theme pt-2">Mensaje</label>
-                                        <textarea type="text" id="message" name="message" rows="2"
-                                            class="form-control md-textarea"></textarea>
-                                    </div>
-
-                                </div>
-                            </div>
-                            <!--Grid row-->
-
-                            <div class="text-center mt-4">
-                                <a class="btn btn-theme color-theme z-depth-5"
-                                    onclick="document.getElementById('contact-form').submit();">enviar</a>
-                            </div>
-                            <div class="status"></div>
-                        </form>
-
-                    </div>
-                    <!--Grid column-->
-
-                    <!-- Contact Information-->
-                    <div
-                        class="contact-information col-md-5 text-center flex-center p-5 color-theme text-white">
-                        <ul class="list-unstyled mb-0">
-                            <li><i class="fas fa-map-marker-alt fa-2x"></i>
-                                <p class="mt-2">San Francisco, CA 94126, USA</p>
-                            </li>
-
-                            <li><i class="fas fa-phone mt-4 fa-2x"></i>
-                                <p class="mt-2">+ 01 234 567 89</p>
-                            </li>
-
-                            <li><i class="fas fa-envelope mt-4 fa-2x"></i>
-                                <p class="mt-2">contacto@lionsdevstudio.com</p>
-                            </li>
-                        </ul>
-                    </div>
-                    <!-- ./Contact Information-->
-                </div>
-                <!-- ./Tabla de Formulario -->
-                <!-- ./Formulario -->
-                <!--Google map-->
-                <div id="map-container-google-1" class="map-container my-5 max-width mx-auto"
-                    style="height: 40vh;">
-                    <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12610.52510214519!2d-122.4059758598319!3d37.798680131327636!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8085806800ecb699%3A0xf91d657fb37e68fd!2sSan%20Francisco%2C%20California%2094126%2C%20EE.%20UU.!5e0!3m2!1ses-419!2smx!4v1585591882087!5m2!1ses-419!2smx"
-                        frameborder="0" allowfullscreen
-                        style="border:0; padding: 0; height: 40vh; width: 100%;">
-                    </iframe>
-                </div>
-                <!-- ./Google map -->
             </div>
             <!-- ./Contenido -->
 
