--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -118,7 +118,7 @@
     <!-- Encabezado -->
 
     <!-- Contenido -->
-    <main class="section-wrapper">
+    <main class="main">
         <!-- Sobre Nosotros -->
         <section class="about">
             <div class="view">
