--- a/servicios.html
+++ b/servicios.html
@@ -66,7 +66,8 @@
             <div class="collapse navbar-collapse" id="collapsibleNavId">
                 <ul class="navbar-nav m-auto d-flex align-items-center justify-content-center p-0">
                     <li class="nav-item">
-                        <a class="nav-link text-navbar" href="index.html">Inicio<span class="sr-only">(current)</span></a>
+                        <a class="nav-link text-navbar" href="index.html">Inicio<span
+                                class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-navbar" href="quienes-somos.html">Quienes Somos</a>
@@ -113,9 +114,9 @@
 
     </header>
     <!-- Encabezado -->
-    
+
     <!-- Contenido -->
-    <main class="section-wrapper p-0">
+    <main class="main">
         <section class="services">
 
             <!-- Section Title -->
@@ -134,70 +135,77 @@
 
             <!-- Content -->
             <div class="section-content">
-                <div class="content-wrapper">
+
+                <!-- Necesidades -->
+                <div id="necesidades"class="bg-light-blue-1">
+                    <div class="content-wrapper">
+                        <h2 id="nuestros-servicios" class="h2-responsive text-theme text-center content-h2 pb-5">
+                            Nuestros Servicios</h2>
+                        <p class="text-justify">En la actualidad las empresas requieren enfocarse en dar a
+                            conocer los productos o servicios que estas ofrecen por medio de un medio digital
+                            encabezado en primer lugar por una página web la cual permitirá a lograr dicho objetivo.
+                        </p>
+                        <p class="text-justify">La presentación de la página tiene que ser amigable para el usuario,
+                            llamativa y con la necesidad de impulsar el producto o servicio que tu quieres dar a
+                            conocer. La clave está en el diseño como son los colores, presentación, información
+                            y multimedia. </p>
+                        <!-- ./Necesidades -->
 
 
-                    <!-- Necesidades -->
-                    <h2 id="nuestros-servicios" class="h2-responsive text-theme text-center content-h2 pb-5">Nuestros Servicios</h2>
-                    <p class="text-justify">En la actualidad las empresas requieren enfocarse en dar a
-                        conocer los productos o servicios que estas ofrecen por medio de un medio digital
-                        encabezado en primer lugar por una página web la cual permitirá a lograr dicho objetivo.
-                    </p>
-                    <p class="text-justify">La presentación de la página tiene que ser amigable para el usuario,
-                        llamativa y con la necesidad de impulsar el producto o servicio que tu quieres dar a
-                        conocer. La clave está en el diseño como son los colores, presentación, información
-                        y multimedia. </p>
-                    <!-- ./Necesidades -->
-                    
+                        <!-- Tarjetas -->
+                        <div class="servicios container-fluid">
+                            <div class="row py-5">
+                                <!-- Diseño Web -->
+                                <div class="col-md-6 p-0 mt-5">
+                                    <div>
+                                        <div class="card-img-top d-flex align-items-center justify-content-center pb-4">
+                                            <i class="fas fa-icons fa-4x text-theme"></i>
+                                        </div>
+                                        <div class="card-body p-0">
+                                            <h4 class="card-title">Diseño Web</h4>
 
-                    <!-- Tarjetas -->
-                    <div class="servicios container-fluid">
-                        <div class="row py-5">
-                            <!-- Diseño Web -->
-                            <div class="col-md-6 p-0 mt-5">
-                                <div>
-                                    <div class="card-img-top d-flex align-items-center justify-content-center pb-4">
-                                        <i class="fas fa-icons fa-4x text-theme"></i>
-                                    </div>
-                                    <div class="card-body p-0">
-                                        <h4 class="card-title">Diseño Web</h4>
-
-                                        <p class="card-text">La presentación de la página tiene que ser amigable
-                                            para el usuario, llamativa y con la necesidad de impulsar el producto o servicio que tu
-                                            quieres dar a conocer; la clave está en el diseño como son los colores, presentación,información y multimedia. <br><br>
-                                            Nos gusta escuchar las necesidades de nuestros clientes,generando una vista preliminar y compartirla al cliente para que nos haga llegar sus
-                                            intereses, inquietudes o sugerencias y nosotros generar la página bajo sus
-                                            necesidades.</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- ./Diseño Web -->
-
-                            <!-- Desarrollo Web -->
-                            <div class="col-md-6 p-0 mt-5">
-                                <div>
-                                    <div class="card-img-top d-flex align-items-center justify-content-center pb-4">
-                                        <i class="fas fa-terminal fa-4x text-theme"></i>
-                                    </div>
-                                    <div class="card-body p-0">
-                                        <h4 class="card-title">Desarrollo Web</h4>
-                                        <p class="card-text">Se crean páginas desde cero con las tecnologías como
-                                            son
-                                            HTML, CSS, JS y/o en su caso con Wordpress para la generación de una tienda en
-                                            línea
-                                            y/o Blog para dar a conocer sus productos.</p>
+                                            <p class="card-text">La presentación de la página tiene que ser amigable
+                                                para el usuario, llamativa y con la necesidad de impulsar el producto o
+                                                servicio que tu
+                                                quieres dar a conocer; la clave está en el diseño como son los colores,
+                                                presentación,información y multimedia. <br><br>
+                                                Nos gusta escuchar las necesidades de nuestros clientes,generando una
+                                                vista preliminar y compartirla al cliente para que nos haga llegar sus
+                                                intereses, inquietudes o sugerencias y nosotros generar la página bajo
+                                                sus
+                                                necesidades.</p>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            <!-- ./Desarrollo Web -->
+                                <!-- ./Diseño Web -->
 
+                                <!-- Desarrollo Web -->
+                                <div class="col-md-6 p-0 mt-5">
+                                    <div>
+                                        <div class="card-img-top d-flex align-items-center justify-content-center pb-4">
+                                            <i class="fas fa-terminal fa-4x text-theme"></i>
+                                        </div>
+                                        <div class="card-body p-0">
+                                            <h4 class="card-title">Desarrollo Web</h4>
+                                            <p class="card-text">Se crean páginas desde cero con las tecnologías como
+                                                son
+                                                HTML, CSS, JS y/o en su caso con Wordpress para la generación de una
+                                                tienda en
+                                                línea
+                                                y/o Blog para dar a conocer sus productos.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- ./Desarrollo Web -->
+
+                            </div>
                         </div>
+                        <!-- ./Tarjetas -->
                     </div>
-                    <!-- ./Tarjetas -->
                 </div>
 
                 <!-- ¿Que ofrecemos? -->
-                <div id="que-ofrecemos"class="bg-light-blue-1">
+                <div id="que-ofrecemos" class="bg-light-blue-2">
                     <div class="content-wrapper">
                         <h2 class="h2-responsive text-theme text-center content-h2 pb-5">¿Qué ofrecemos? </h2>
 
@@ -211,7 +219,12 @@
                                     <div class="col-md-7 p-5 white ">
                                         <h2 class="h2-responsive text-theme">Páginas Responsivas</h2>
                                         <hr class="hr-card">
-                                        <p class="mt-5"> Actualmente existe la necesidad de que la página web sea vista de forma correcta para cada plataforma como teléfonos inteligentes, tabletas o computadora. Para ello existe la forma de adaptar la información al dispositivo logrando una mejor presentación de la información, lectura y entendimiento de lo que quieres dar a conocer y asi poder captar mayor número de clientes.</p>
+                                        <p class="mt-5"> Actualmente existe la necesidad de que la página web sea vista
+                                            de forma correcta para cada plataforma como teléfonos inteligentes, tabletas
+                                            o computadora. Para ello existe la forma de adaptar la información al
+                                            dispositivo logrando una mejor presentación de la información, lectura y
+                                            entendimiento de lo que quieres dar a conocer y asi poder captar mayor
+                                            número de clientes.</p>
                                     </div>
                                 </div>
                             </div>
@@ -228,7 +241,12 @@
                                     <div class="col-md-7 p-5 white ">
                                         <h2 class="h2-responsive text-theme">Optimización de SEO</h2>
                                         <hr class="hr-card">
-                                        <p class="mt-5">Consiste en posicionar tu página en el mejor lugar dentro de la lista de resultados de la navegadores como son Google, Bing entre otros. Para ello trataremos de lograr un posicionamiento orgánico que consiste en no depender de una campaña publicitaria, siendo nuestra mejor técnica tener un desarrollo de código funcional y con todas las características que requera el buscador. </p>
+                                        <p class="mt-5">Consiste en posicionar tu página en el mejor lugar dentro de la
+                                            lista de resultados de la navegadores como son Google, Bing entre otros.
+                                            Para ello trataremos de lograr un posicionamiento orgánico que consiste en
+                                            no depender de una campaña publicitaria, siendo nuestra mejor técnica tener
+                                            un desarrollo de código funcional y con todas las características que
+                                            requera el buscador. </p>
 
                                     </div>
                                 </div>
@@ -242,7 +260,7 @@
                 <!-- ./¿Que ofrecemos? -->
 
                 <!-- ¿Como lo logramos? -->
-                <div id="como-logramos" class="bg-light-blue-2">
+                <div id="como-logramos" class="bg-light-blue-3">
                     <div class="content-wrapper">
                         <h2 class="h2-responsive text-theme text-center content-h2 pb-5">¿Como lo logramos? </h2>
 
